// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/tabs/demo/basic.md correctly 1`] = `
<div
  class="ant-tabs ant-tabs-top ant-tabs-line"
>
  <div
    class="ant-tabs-bar"
    role="tablist"
    tabindex="0"
  >
    <div
      class="ant-tabs-nav-container"
    >
      <span
        class="ant-tabs-tab-prev ant-tabs-tab-btn-disabled"
        unselectable="unselectable"
      >
        <span
          class="ant-tabs-tab-prev-icon"
        >
          <i
            class="anticon anticon-left ant-tabs-tab-prev-icon-target"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="left"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8c-16.4 12.8-16.4 37.5 0 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
              />
            </svg>
          </i>
        </span>
      </span>
      <span
        class="ant-tabs-tab-next ant-tabs-tab-btn-disabled"
        unselectable="unselectable"
      >
        <span
          class="ant-tabs-tab-next-icon"
        >
          <i
            class="anticon anticon-right ant-tabs-tab-next-icon-target"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="right"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M765.7 486.8L314.9 134.7c-5.3-4.1-12.9-.4-12.9 6.3v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1c16.4-12.8 16.4-37.6 0-50.4z"
              />
            </svg>
          </i>
        </span>
      </span>
      <div
        class="ant-tabs-nav-wrap"
      >
        <div
          class="ant-tabs-nav-scroll"
        >
          <div
            class="ant-tabs-nav ant-tabs-nav-animated"
          >
            <div>
              <div
                aria-disabled="false"
                aria-selected="true"
                class="ant-tabs-tab-active ant-tabs-tab"
                role="tab"
              >
                Tab 1
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class=" ant-tabs-tab"
                role="tab"
              >
                Tab 2
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class=" ant-tabs-tab"
                role="tab"
              >
                Tab 3
              </div>
            </div>
            <div
              class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-tabs-content ant-tabs-content-animated"
    style="margin-left:0%"
  >
    <div
      aria-hidden="false"
      class="ant-tabs-tabpane ant-tabs-tabpane-active"
      role="tabpanel"
    >
      Content of Tab Pane 1
    </div>
    <div
      aria-hidden="true"
      class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
      role="tabpanel"
    />
    <div
      aria-hidden="true"
      class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
      role="tabpanel"
    />
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/card.md correctly 1`] = `
<div
  class="ant-tabs ant-tabs-top ant-tabs-card ant-tabs-no-animation"
>
  <div
    class="ant-tabs-bar"
    role="tablist"
    tabindex="0"
  >
    <div
      class="ant-tabs-nav-container"
    >
      <span
        class="ant-tabs-tab-prev ant-tabs-tab-btn-disabled"
        unselectable="unselectable"
      >
        <span
          class="ant-tabs-tab-prev-icon"
        >
          <i
            class="anticon anticon-left ant-tabs-tab-prev-icon-target"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="left"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8c-16.4 12.8-16.4 37.5 0 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
              />
            </svg>
          </i>
        </span>
      </span>
      <span
        class="ant-tabs-tab-next ant-tabs-tab-btn-disabled"
        unselectable="unselectable"
      >
        <span
          class="ant-tabs-tab-next-icon"
        >
          <i
            class="anticon anticon-right ant-tabs-tab-next-icon-target"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="right"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M765.7 486.8L314.9 134.7c-5.3-4.1-12.9-.4-12.9 6.3v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1c16.4-12.8 16.4-37.6 0-50.4z"
              />
            </svg>
          </i>
        </span>
      </span>
      <div
        class="ant-tabs-nav-wrap"
      >
        <div
          class="ant-tabs-nav-scroll"
        >
          <div
            class="ant-tabs-nav ant-tabs-nav-animated"
          >
            <div>
              <div
                aria-disabled="false"
                aria-selected="true"
                class="ant-tabs-tab-active ant-tabs-tab"
                role="tab"
              >
                Tab 1
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class=" ant-tabs-tab"
                role="tab"
              >
                Tab 2
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class=" ant-tabs-tab"
                role="tab"
              >
                Tab 3
              </div>
            </div>
            <div
              class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-tabs-content ant-tabs-content-no-animated"
  >
    <div
      aria-hidden="false"
      class="ant-tabs-tabpane ant-tabs-tabpane-active"
      role="tabpanel"
    >
      Content of Tab Pane 1
    </div>
    <div
      aria-hidden="true"
      class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
      role="tabpanel"
    />
    <div
      aria-hidden="true"
      class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
      role="tabpanel"
    />
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/card-top.md correctly 1`] = `
<div
  class="card-container"
>
  <div
    class="ant-tabs ant-tabs-top ant-tabs-card ant-tabs-no-animation"
  >
    <div
      class="ant-tabs-bar"
      role="tablist"
      tabindex="0"
    >
      <div
        class="ant-tabs-nav-container"
      >
        <span
          class="ant-tabs-tab-prev ant-tabs-tab-btn-disabled"
          unselectable="unselectable"
        >
          <span
            class="ant-tabs-tab-prev-icon"
          >
            <i
              class="anticon anticon-left ant-tabs-tab-prev-icon-target"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="left"
                fill="currentColor"
                height="1em"
                viewBox="0 0 1024 1024"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8c-16.4 12.8-16.4 37.5 0 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </i>
          </span>
        </span>
        <span
          class="ant-tabs-tab-next ant-tabs-tab-btn-disabled"
          unselectable="unselectable"
        >
          <span
            class="ant-tabs-tab-next-icon"
          >
            <i
              class="anticon anticon-right ant-tabs-tab-next-icon-target"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="right"
                fill="currentColor"
                height="1em"
                viewBox="0 0 1024 1024"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M765.7 486.8L314.9 134.7c-5.3-4.1-12.9-.4-12.9 6.3v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1c16.4-12.8 16.4-37.6 0-50.4z"
                />
              </svg>
            </i>
          </span>
        </span>
        <div
          class="ant-tabs-nav-wrap"
        >
          <div
            class="ant-tabs-nav-scroll"
          >
            <div
              class="ant-tabs-nav ant-tabs-nav-animated"
            >
              <div>
                <div
                  aria-disabled="false"
                  aria-selected="true"
                  class="ant-tabs-tab-active ant-tabs-tab"
                  role="tab"
                >
                  Tab Title 1
                </div>
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class=" ant-tabs-tab"
                  role="tab"
                >
                  Tab Title 2
                </div>
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class=" ant-tabs-tab"
                  role="tab"
                >
                  Tab Title 3
                </div>
              </div>
              <div
                class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-tabs-content ant-tabs-content-no-animated"
    >
      <div
        aria-hidden="false"
        class="ant-tabs-tabpane ant-tabs-tabpane-active"
        role="tabpanel"
      >
        <p>
          Content of Tab Pane 1
        </p>
        <p>
          Content of Tab Pane 1
        </p>
        <p>
          Content of Tab Pane 1
        </p>
      </div>
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
        role="tabpanel"
      />
    </div>
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/custom-add-trigger.md correctly 1`] = `
<div>
  <div
    style="margin-bottom:16px"
  >
    <button
      class="ant-btn"
      type="button"
    >
      <span>
        ADD
      </span>
    </button>
  </div>
  <div
    class="ant-tabs ant-tabs-top ant-tabs-card ant-tabs-editable-card ant-tabs-no-animation"
  >
    <div
      class="ant-tabs-bar"
      role="tablist"
      tabindex="0"
    >
      <div
        class="ant-tabs-nav-container"
      >
        <span
          class="ant-tabs-tab-prev ant-tabs-tab-btn-disabled"
          unselectable="unselectable"
        >
          <span
            class="ant-tabs-tab-prev-icon"
          >
            <i
              class="anticon anticon-left ant-tabs-tab-prev-icon-target"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="left"
                fill="currentColor"
                height="1em"
                viewBox="0 0 1024 1024"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8c-16.4 12.8-16.4 37.5 0 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </i>
          </span>
        </span>
        <span
          class="ant-tabs-tab-next ant-tabs-tab-btn-disabled"
          unselectable="unselectable"
        >
          <span
            class="ant-tabs-tab-next-icon"
          >
            <i
              class="anticon anticon-right ant-tabs-tab-next-icon-target"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="right"
                fill="currentColor"
                height="1em"
                viewBox="0 0 1024 1024"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M765.7 486.8L314.9 134.7c-5.3-4.1-12.9-.4-12.9 6.3v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1c16.4-12.8 16.4-37.6 0-50.4z"
                />
              </svg>
            </i>
          </span>
        </span>
        <div
          class="ant-tabs-nav-wrap"
        >
          <div
            class="ant-tabs-nav-scroll"
          >
            <div
              class="ant-tabs-nav ant-tabs-nav-animated"
            >
              <div>
                <div
                  aria-disabled="false"
                  aria-selected="true"
                  class="ant-tabs-tab-active ant-tabs-tab"
                  role="tab"
                >
                  <div>
                    Tab 1
                    <i
                      class="anticon anticon-close ant-tabs-close-x"
                    >
                      <svg
                        aria-hidden="true"
                        class=""
                        data-icon="close"
                        fill="currentColor"
                        height="1em"
                        viewBox="0 0 1024 1024"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9c-4.4 5.2-.7 13.1 6.1 13.1h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                        />
                      </svg>
                    </i>
                  </div>
                </div>
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class=" ant-tabs-tab"
                  role="tab"
                >
                  <div>
                    Tab 2
                    <i
                      class="anticon anticon-close ant-tabs-close-x"
                    >
                      <svg
                        aria-hidden="true"
                        class=""
                        data-icon="close"
                        fill="currentColor"
                        height="1em"
                        viewBox="0 0 1024 1024"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9c-4.4 5.2-.7 13.1 6.1 13.1h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                        />
                      </svg>
                    </i>
                  </div>
                </div>
              </div>
              <div
                class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-tabs-content ant-tabs-content-no-animated"
    >
      <div
        aria-hidden="false"
        class="ant-tabs-tabpane ant-tabs-tabpane-active"
        role="tabpanel"
      >
        Content of Tab Pane 1
      </div>
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
        role="tabpanel"
      />
    </div>
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/custom-tab-bar.md correctly 1`] = `
<div>
  <div
    class="ant-tabs ant-tabs-top ant-tabs-line"
  >
    <div>
      <div />
      <div
        class="ant-tabs-bar"
        role="tablist"
        style="z-index:1;background:#fff"
        tabindex="0"
      >
        <div
          class="ant-tabs-nav-container"
        >
          <span
            class="ant-tabs-tab-prev ant-tabs-tab-btn-disabled"
            unselectable="unselectable"
          >
            <span
              class="ant-tabs-tab-prev-icon"
            >
              <i
                class="anticon anticon-left ant-tabs-tab-prev-icon-target"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="left"
                  fill="currentColor"
                  height="1em"
                  viewBox="0 0 1024 1024"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8c-16.4 12.8-16.4 37.5 0 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                  />
                </svg>
              </i>
            </span>
          </span>
          <span
            class="ant-tabs-tab-next ant-tabs-tab-btn-disabled"
            unselectable="unselectable"
          >
            <span
              class="ant-tabs-tab-next-icon"
            >
              <i
                class="anticon anticon-right ant-tabs-tab-next-icon-target"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="right"
                  fill="currentColor"
                  height="1em"
                  viewBox="0 0 1024 1024"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M765.7 486.8L314.9 134.7c-5.3-4.1-12.9-.4-12.9 6.3v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1c16.4-12.8 16.4-37.6 0-50.4z"
                  />
                </svg>
              </i>
            </span>
          </span>
          <div
            class="ant-tabs-nav-wrap"
          >
            <div
              class="ant-tabs-nav-scroll"
            >
              <div
                class="ant-tabs-nav ant-tabs-nav-animated"
              >
                <div>
                  <div
                    aria-disabled="false"
                    aria-selected="true"
                    class="ant-tabs-tab-active ant-tabs-tab"
                    role="tab"
                  >
                    Tab 1
                  </div>
                  <div
                    aria-disabled="false"
                    aria-selected="false"
                    class=" ant-tabs-tab"
                    role="tab"
                  >
                    Tab 2
                  </div>
                  <div
                    aria-disabled="false"
                    aria-selected="false"
                    class=" ant-tabs-tab"
                    role="tab"
                  >
                    Tab 3
                  </div>
                </div>
                <div
                  class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-tabs-content ant-tabs-content-animated"
      style="margin-left:0%"
    >
      <div
        aria-hidden="false"
        class="ant-tabs-tabpane ant-tabs-tabpane-active"
        role="tabpanel"
        style="height:200px"
      >
        Content of Tab Pane 1
      </div>
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
        role="tabpanel"
      />
    </div>
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/disabled.md correctly 1`] = `
<div
  class="ant-tabs ant-tabs-top ant-tabs-line"
>
  <div
    class="ant-tabs-bar"
    role="tablist"
    tabindex="0"
  >
    <div
      class="ant-tabs-nav-container"
    >
      <span
        class="ant-tabs-tab-prev ant-tabs-tab-btn-disabled"
        unselectable="unselectable"
      >
        <span
          class="ant-tabs-tab-prev-icon"
        >
          <i
            class="anticon anticon-left ant-tabs-tab-prev-icon-target"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="left"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8c-16.4 12.8-16.4 37.5 0 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
              />
            </svg>
          </i>
        </span>
      </span>
      <span
        class="ant-tabs-tab-next ant-tabs-tab-btn-disabled"
        unselectable="unselectable"
      >
        <span
          class="ant-tabs-tab-next-icon"
        >
          <i
            class="anticon anticon-right ant-tabs-tab-next-icon-target"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="right"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M765.7 486.8L314.9 134.7c-5.3-4.1-12.9-.4-12.9 6.3v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1c16.4-12.8 16.4-37.6 0-50.4z"
              />
            </svg>
          </i>
        </span>
      </span>
      <div
        class="ant-tabs-nav-wrap"
      >
        <div
          class="ant-tabs-nav-scroll"
        >
          <div
            class="ant-tabs-nav ant-tabs-nav-animated"
          >
            <div>
              <div
                aria-disabled="false"
                aria-selected="true"
                class="ant-tabs-tab-active ant-tabs-tab"
                role="tab"
              >
                Tab 1
              </div>
              <div
                aria-disabled="true"
                aria-selected="false"
                class=" ant-tabs-tab ant-tabs-tab-disabled"
                role="tab"
              >
                Tab 2
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class=" ant-tabs-tab"
                role="tab"
              >
                Tab 3
              </div>
            </div>
            <div
              class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-tabs-content ant-tabs-content-animated"
    style="margin-left:0%"
  >
    <div
      aria-hidden="false"
      class="ant-tabs-tabpane ant-tabs-tabpane-active"
      role="tabpanel"
    >
      Tab 1
    </div>
    <div
      aria-hidden="true"
      class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
      role="tabpanel"
    />
    <div
      aria-hidden="true"
      class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
      role="tabpanel"
    />
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/editable-card.md correctly 1`] = `
<div
  class="ant-tabs ant-tabs-top ant-tabs-card ant-tabs-editable-card ant-tabs-no-animation"
>
  <div
    class="ant-tabs-bar"
    role="tablist"
    tabindex="0"
  >
    <div
      class="ant-tabs-extra-content"
      style="float:right"
    >
      <span>
        <i
          class="anticon anticon-plus ant-tabs-new-tab"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="plus"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M848 474H550V152h-76v322H176c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h298v322h76V550h298c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8z"
            />
          </svg>
        </i>
      </span>
    </div>
    <div
      class="ant-tabs-nav-container"
    >
      <span
        class="ant-tabs-tab-prev ant-tabs-tab-btn-disabled"
        unselectable="unselectable"
      >
        <span
          class="ant-tabs-tab-prev-icon"
        >
          <i
            class="anticon anticon-left ant-tabs-tab-prev-icon-target"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="left"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8c-16.4 12.8-16.4 37.5 0 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
              />
            </svg>
          </i>
        </span>
      </span>
      <span
        class="ant-tabs-tab-next ant-tabs-tab-btn-disabled"
        unselectable="unselectable"
      >
        <span
          class="ant-tabs-tab-next-icon"
        >
          <i
            class="anticon anticon-right ant-tabs-tab-next-icon-target"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="right"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M765.7 486.8L314.9 134.7c-5.3-4.1-12.9-.4-12.9 6.3v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1c16.4-12.8 16.4-37.6 0-50.4z"
              />
            </svg>
          </i>
        </span>
      </span>
      <div
        class="ant-tabs-nav-wrap"
      >
        <div
          class="ant-tabs-nav-scroll"
        >
          <div
            class="ant-tabs-nav ant-tabs-nav-animated"
          >
            <div>
              <div
                aria-disabled="false"
                aria-selected="true"
                class="ant-tabs-tab-active ant-tabs-tab"
                role="tab"
              >
                <div>
                  Tab 1
                  <i
                    class="anticon anticon-close ant-tabs-close-x"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="close"
                      fill="currentColor"
                      height="1em"
                      viewBox="0 0 1024 1024"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9c-4.4 5.2-.7 13.1 6.1 13.1h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                      />
                    </svg>
                  </i>
                </div>
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class=" ant-tabs-tab"
                role="tab"
              >
                <div>
                  Tab 2
                  <i
                    class="anticon anticon-close ant-tabs-close-x"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="close"
                      fill="currentColor"
                      height="1em"
                      viewBox="0 0 1024 1024"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9c-4.4 5.2-.7 13.1 6.1 13.1h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                      />
                    </svg>
                  </i>
                </div>
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class=" ant-tabs-tab"
                role="tab"
              >
                <div
                  class="ant-tabs-tab-unclosable"
                >
                  Tab 3
                </div>
              </div>
            </div>
            <div
              class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-tabs-content ant-tabs-content-no-animated"
  >
    <div
      aria-hidden="false"
      class="ant-tabs-tabpane ant-tabs-tabpane-active"
      role="tabpanel"
    >
      Content of Tab 1
    </div>
    <div
      aria-hidden="true"
      class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
      role="tabpanel"
    />
    <div
      aria-hidden="true"
      class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
      role="tabpanel"
    />
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/extra.md correctly 1`] = `
<div
  class="ant-tabs ant-tabs-top ant-tabs-line"
>
  <div
    class="ant-tabs-bar"
    role="tablist"
    tabindex="0"
  >
    <div
      class="ant-tabs-extra-content"
      style="float:right"
    >
      <button
        class="ant-btn"
        type="button"
      >
        <span>
          Extra Action
        </span>
      </button>
    </div>
    <div
      class="ant-tabs-nav-container"
    >
      <span
        class="ant-tabs-tab-prev ant-tabs-tab-btn-disabled"
        unselectable="unselectable"
      >
        <span
          class="ant-tabs-tab-prev-icon"
        >
          <i
            class="anticon anticon-left ant-tabs-tab-prev-icon-target"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="left"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8c-16.4 12.8-16.4 37.5 0 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
              />
            </svg>
          </i>
        </span>
      </span>
      <span
        class="ant-tabs-tab-next ant-tabs-tab-btn-disabled"
        unselectable="unselectable"
      >
        <span
          class="ant-tabs-tab-next-icon"
        >
          <i
            class="anticon anticon-right ant-tabs-tab-next-icon-target"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="right"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M765.7 486.8L314.9 134.7c-5.3-4.1-12.9-.4-12.9 6.3v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1c16.4-12.8 16.4-37.6 0-50.4z"
              />
            </svg>
          </i>
        </span>
      </span>
      <div
        class="ant-tabs-nav-wrap"
      >
        <div
          class="ant-tabs-nav-scroll"
        >
          <div
            class="ant-tabs-nav ant-tabs-nav-animated"
          >
            <div>
              <div
                aria-disabled="false"
                aria-selected="true"
                class="ant-tabs-tab-active ant-tabs-tab"
                role="tab"
              >
                Tab 1
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class=" ant-tabs-tab"
                role="tab"
              >
                Tab 2
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class=" ant-tabs-tab"
                role="tab"
              >
                Tab 3
              </div>
            </div>
            <div
              class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-tabs-content ant-tabs-content-animated"
    style="margin-left:0%"
  >
    <div
      aria-hidden="false"
      class="ant-tabs-tabpane ant-tabs-tabpane-active"
      role="tabpanel"
    >
      Content of tab 1
    </div>
    <div
      aria-hidden="true"
      class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
      role="tabpanel"
    />
    <div
      aria-hidden="true"
      class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
      role="tabpanel"
    />
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/icon.md correctly 1`] = `
<div
  class="ant-tabs ant-tabs-top ant-tabs-line"
>
  <div
    class="ant-tabs-bar"
    role="tablist"
    tabindex="0"
  >
    <div
      class="ant-tabs-nav-container"
    >
      <span
        class="ant-tabs-tab-prev ant-tabs-tab-btn-disabled"
        unselectable="unselectable"
      >
        <span
          class="ant-tabs-tab-prev-icon"
        >
          <i
            class="anticon anticon-left ant-tabs-tab-prev-icon-target"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="left"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8c-16.4 12.8-16.4 37.5 0 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
              />
            </svg>
          </i>
        </span>
      </span>
      <span
        class="ant-tabs-tab-next ant-tabs-tab-btn-disabled"
        unselectable="unselectable"
      >
        <span
          class="ant-tabs-tab-next-icon"
        >
          <i
            class="anticon anticon-right ant-tabs-tab-next-icon-target"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="right"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M765.7 486.8L314.9 134.7c-5.3-4.1-12.9-.4-12.9 6.3v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1c16.4-12.8 16.4-37.6 0-50.4z"
              />
            </svg>
          </i>
        </span>
      </span>
      <div
        class="ant-tabs-nav-wrap"
      >
        <div
          class="ant-tabs-nav-scroll"
        >
          <div
            class="ant-tabs-nav ant-tabs-nav-animated"
          >
            <div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class=" ant-tabs-tab"
                role="tab"
              >
                <span>
                  <i
                    class="anticon anticon-apple"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="apple"
                      fill="currentColor"
                      height="1em"
                      viewBox="0 0 1024 1024"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M747.4 535.7c-.4-68.2 30.5-119.6 92.9-157.5-34.9-50-87.7-77.5-157.3-82.8-65.9-5.2-138 38.4-164.4 38.4-27.9 0-91.7-36.6-141.9-36.6C273.1 298.8 163 379.8 163 544.6c0 48.7 8.9 99 26.7 150.8 23.8 68.2 109.6 235.3 199.1 232.6 46.8-1.1 79.9-33.2 140.8-33.2 59.1 0 89.7 33.2 141.9 33.2 90.3-1.3 167.9-153.2 190.5-221.6-121.1-57.1-114.6-167.2-114.6-170.7zm-105.1-305c50.7-60.2 46.1-115 44.6-134.7-44.8 2.6-96.6 30.5-126.1 64.8-32.5 36.8-51.6 82.3-47.5 133.6 48.4 3.7 92.6-21.2 129-63.7z"
                      />
                    </svg>
                  </i>
                  Tab 1
                </span>
              </div>
              <div
                aria-disabled="false"
                aria-selected="true"
                class="ant-tabs-tab-active ant-tabs-tab"
                role="tab"
              >
                <span>
                  <i
                    class="anticon anticon-android"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="android"
                      fill="currentColor"
                      height="1em"
                      viewBox="0 0 1024 1024"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M270.1 741.7c0 23.4 19.1 42.5 42.6 42.5h48.7v120.4c0 30.5 24.5 55.4 54.6 55.4 30.2 0 54.6-24.8 54.6-55.4V784.1h85v120.4c0 30.5 24.5 55.4 54.6 55.4 30.2 0 54.6-24.8 54.6-55.4V784.1h48.7c23.5 0 42.6-19.1 42.6-42.5V346.4h-486v395.3zm357.1-600.1l44.9-65c2.6-3.8 2-8.9-1.5-11.4-3.5-2.4-8.5-1.2-11.1 2.6l-46.6 67.6c-30.7-12.1-64.9-18.8-100.8-18.8-35.9 0-70.1 6.7-100.8 18.8l-46.6-67.5c-2.6-3.8-7.6-5.1-11.1-2.6-3.5 2.4-4.1 7.4-1.5 11.4l44.9 65c-71.4 33.2-121.4 96.1-127.8 169.6h486c-6.6-73.6-56.7-136.5-128-169.7zM409.5 244.1c-14.8 0-26.9-12-26.9-26.9 0-14.8 12-26.9 26.9-26.9 14.8 0 26.9 12 26.9 26.9-.1 14.9-12.1 26.9-26.9 26.9zm208.4 0c-14.8 0-26.9-12-26.9-26.9 0-14.8 12-26.9 26.9-26.9 14.8 0 26.9 12 26.9 26.9-.1 14.9-12.1 26.9-26.9 26.9zm223.4 100.7c-30.2 0-54.6 24.8-54.6 55.4v216.4c0 30.5 24.5 55.4 54.6 55.4 30.2 0 54.6-24.8 54.6-55.4V400.1c.1-30.6-24.3-55.3-54.6-55.3zm-658.6 0c-30.2 0-54.6 24.8-54.6 55.4v216.4c0 30.5 24.5 55.4 54.6 55.4 30.2 0 54.6-24.8 54.6-55.4V400.1c0-30.6-24.5-55.3-54.6-55.3z"
                      />
                    </svg>
                  </i>
                  Tab 2
                </span>
              </div>
            </div>
            <div
              class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-tabs-content ant-tabs-content-animated"
    style="margin-left:-100%"
  >
    <div
      aria-hidden="true"
      class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
      role="tabpanel"
    />
    <div
      aria-hidden="false"
      class="ant-tabs-tabpane ant-tabs-tabpane-active"
      role="tabpanel"
    >
      Tab 2
    </div>
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/position.md correctly 1`] = `
<div>
  <div
    style="margin-bottom:16px"
  >
    Tab position：
    <div
      class="ant-select ant-select-enabled"
    >
      <div
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="true"
        class="ant-select-selection
            ant-select-selection--single"
        role="combobox"
        tabindex="0"
      >
        <div
          class="ant-select-selection__rendered"
        >
          <div
            class="ant-select-selection-selected-value"
            style="display:block;opacity:1"
            title="top"
          >
            top
          </div>
        </div>
        <span
          class="ant-select-arrow"
          style="user-select:none;-webkit-user-select:none"
          unselectable="on"
        >
          <i
            class="anticon anticon-down ant-select-arrow-icon"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="down"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
              />
            </svg>
          </i>
        </span>
      </div>
    </div>
  </div>
  <div
    class="ant-tabs ant-tabs-top ant-tabs-line"
  >
    <div
      class="ant-tabs-bar"
      role="tablist"
      tabindex="0"
    >
      <div
        class="ant-tabs-nav-container"
      >
        <span
          class="ant-tabs-tab-prev ant-tabs-tab-btn-disabled"
          unselectable="unselectable"
        >
          <span
            class="ant-tabs-tab-prev-icon"
          >
            <i
              class="anticon anticon-left ant-tabs-tab-prev-icon-target"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="left"
                fill="currentColor"
                height="1em"
                viewBox="0 0 1024 1024"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8c-16.4 12.8-16.4 37.5 0 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </i>
          </span>
        </span>
        <span
          class="ant-tabs-tab-next ant-tabs-tab-btn-disabled"
          unselectable="unselectable"
        >
          <span
            class="ant-tabs-tab-next-icon"
          >
            <i
              class="anticon anticon-right ant-tabs-tab-next-icon-target"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="right"
                fill="currentColor"
                height="1em"
                viewBox="0 0 1024 1024"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M765.7 486.8L314.9 134.7c-5.3-4.1-12.9-.4-12.9 6.3v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1c16.4-12.8 16.4-37.6 0-50.4z"
                />
              </svg>
            </i>
          </span>
        </span>
        <div
          class="ant-tabs-nav-wrap"
        >
          <div
            class="ant-tabs-nav-scroll"
          >
            <div
              class="ant-tabs-nav ant-tabs-nav-animated"
            >
              <div>
                <div
                  aria-disabled="false"
                  aria-selected="true"
                  class="ant-tabs-tab-active ant-tabs-tab"
                  role="tab"
                >
                  Tab 1
                </div>
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class=" ant-tabs-tab"
                  role="tab"
                >
                  Tab 2
                </div>
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class=" ant-tabs-tab"
                  role="tab"
                >
                  Tab 3
                </div>
              </div>
              <div
                class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-tabs-content ant-tabs-content-animated"
      style="margin-left:0%"
    >
      <div
        aria-hidden="false"
        class="ant-tabs-tabpane ant-tabs-tabpane-active"
        role="tabpanel"
      >
        Content of Tab 1
      </div>
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
        role="tabpanel"
      />
    </div>
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/size.md correctly 1`] = `
<div>
  <div
    class="ant-radio-group ant-radio-group-outline"
    style="margin-bottom:16px"
  >
    <label
      class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"
    >
      <span
        class="ant-radio-button ant-radio-button-checked"
      >
        <input
          checked=""
          class="ant-radio-button-input"
          type="radio"
          value="small"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Small
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          type="radio"
          value="default"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Default
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          type="radio"
          value="large"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Large
      </span>
    </label>
  </div>
  <div
    class="ant-tabs ant-tabs-top ant-tabs-small ant-tabs-line"
  >
    <div
      class="ant-tabs-bar"
      role="tablist"
      tabindex="0"
    >
      <div
        class="ant-tabs-nav-container"
      >
        <span
          class="ant-tabs-tab-prev ant-tabs-tab-btn-disabled"
          unselectable="unselectable"
        >
          <span
            class="ant-tabs-tab-prev-icon"
          >
            <i
              class="anticon anticon-left ant-tabs-tab-prev-icon-target"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="left"
                fill="currentColor"
                height="1em"
                viewBox="0 0 1024 1024"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8c-16.4 12.8-16.4 37.5 0 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </i>
          </span>
        </span>
        <span
          class="ant-tabs-tab-next ant-tabs-tab-btn-disabled"
          unselectable="unselectable"
        >
          <span
            class="ant-tabs-tab-next-icon"
          >
            <i
              class="anticon anticon-right ant-tabs-tab-next-icon-target"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="right"
                fill="currentColor"
                height="1em"
                viewBox="0 0 1024 1024"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M765.7 486.8L314.9 134.7c-5.3-4.1-12.9-.4-12.9 6.3v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1c16.4-12.8 16.4-37.6 0-50.4z"
                />
              </svg>
            </i>
          </span>
        </span>
        <div
          class="ant-tabs-nav-wrap"
        >
          <div
            class="ant-tabs-nav-scroll"
          >
            <div
              class="ant-tabs-nav ant-tabs-nav-animated"
            >
              <div>
                <div
                  aria-disabled="false"
                  aria-selected="true"
                  class="ant-tabs-tab-active ant-tabs-tab"
                  role="tab"
                >
                  Tab 1
                </div>
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class=" ant-tabs-tab"
                  role="tab"
                >
                  Tab 2
                </div>
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class=" ant-tabs-tab"
                  role="tab"
                >
                  Tab 3
                </div>
              </div>
              <div
                class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-tabs-content ant-tabs-content-animated"
      style="margin-left:0%"
    >
      <div
        aria-hidden="false"
        class="ant-tabs-tabpane ant-tabs-tabpane-active"
        role="tabpanel"
      >
        Content of tab 1
      </div>
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
        role="tabpanel"
      />
    </div>
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/slide.md correctly 1`] = `
<div>
  <div
    class="ant-radio-group ant-radio-group-outline"
    style="margin-bottom:8px"
  >
    <label
      class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"
    >
      <span
        class="ant-radio-button ant-radio-button-checked"
      >
        <input
          checked=""
          class="ant-radio-button-input"
          type="radio"
          value="top"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Horizontal
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          type="radio"
          value="left"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Vertical
      </span>
    </label>
  </div>
  <div
    class="ant-tabs ant-tabs-top ant-tabs-line"
    style="height:220px"
  >
    <div
      class="ant-tabs-bar"
      role="tablist"
      tabindex="0"
    >
      <div
        class="ant-tabs-nav-container"
      >
        <span
          class="ant-tabs-tab-prev ant-tabs-tab-btn-disabled"
          unselectable="unselectable"
        >
          <span
            class="ant-tabs-tab-prev-icon"
          >
            <i
              class="anticon anticon-left ant-tabs-tab-prev-icon-target"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="left"
                fill="currentColor"
                height="1em"
                viewBox="0 0 1024 1024"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8c-16.4 12.8-16.4 37.5 0 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </i>
          </span>
        </span>
        <span
          class="ant-tabs-tab-next ant-tabs-tab-btn-disabled"
          unselectable="unselectable"
        >
          <span
            class="ant-tabs-tab-next-icon"
          >
            <i
              class="anticon anticon-right ant-tabs-tab-next-icon-target"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="right"
                fill="currentColor"
                height="1em"
                viewBox="0 0 1024 1024"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M765.7 486.8L314.9 134.7c-5.3-4.1-12.9-.4-12.9 6.3v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1c16.4-12.8 16.4-37.6 0-50.4z"
                />
              </svg>
            </i>
          </span>
        </span>
        <div
          class="ant-tabs-nav-wrap"
        >
          <div
            class="ant-tabs-nav-scroll"
          >
            <div
              class="ant-tabs-nav ant-tabs-nav-animated"
            >
              <div>
                <div
                  aria-disabled="false"
                  aria-selected="true"
                  class="ant-tabs-tab-active ant-tabs-tab"
                  role="tab"
                >
                  Tab 1
                </div>
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class=" ant-tabs-tab"
                  role="tab"
                >
                  Tab 2
                </div>
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class=" ant-tabs-tab"
                  role="tab"
                >
                  Tab 3
                </div>
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class=" ant-tabs-tab"
                  role="tab"
                >
                  Tab 4
                </div>
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class=" ant-tabs-tab"
                  role="tab"
                >
                  Tab 5
                </div>
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class=" ant-tabs-tab"
                  role="tab"
                >
                  Tab 6
                </div>
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class=" ant-tabs-tab"
                  role="tab"
                >
                  Tab 7
                </div>
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class=" ant-tabs-tab"
                  role="tab"
                >
                  Tab 8
                </div>
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class=" ant-tabs-tab"
                  role="tab"
                >
                  Tab 9
                </div>
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class=" ant-tabs-tab"
                  role="tab"
                >
                  Tab 10
                </div>
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class=" ant-tabs-tab"
                  role="tab"
                >
                  Tab 11
                </div>
              </div>
              <div
                class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-tabs-content ant-tabs-content-animated"
      style="margin-left:0%"
    >
      <div
        aria-hidden="false"
        class="ant-tabs-tabpane ant-tabs-tabpane-active"
        role="tabpanel"
      >
        Content of tab 1
      </div>
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
        role="tabpanel"
      />
    </div>
  </div>
</div>
`;
